Correct closing element order

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <header id="header">
     {% capture title_first %}{{ site.title | truncatewords: 1, "" }}{% endcapture %}
     {% capture title_last %}{{ site.title | remove: title_first }}{% endcapture %}
-    <h1><a href="https://cloud4est.com"><strong>{{ title_first }}</strong></a><a href="{{ site.url }}">{{ title_last }}</h1></a>
+    <h1><a href="https://cloud4est.com"><strong>{{ title_first }}</strong></a><a href="{{ site.url }}">{{ title_last }}</a></h1>
     <nav>
       <ul>
         <li><a href="https://cloud4est.com" class="icon fa-info-circle">Rólunk</a></li>
